tdf#122319 - Don't allow nullable form components if input is required

Change-Id: I676aab37df7a98192680b87f0143a27d2a5fd3ee
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/140713
Tested-by: Jenkins
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>